<?xml version="1.0"?>
<package format="2">
  <name>practice_1</name>
  <version>0.0.1</version>
  <description>The practice_1 package</description>
  <maintainer email="dmytro.zabolotnii@ut.ee">dmytro</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
